--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -29,7 +29,9 @@
   "Add store configuration": "Add store configuration",
   "Add value": "Add value",
   "Additional Data": "Additional Data",
+  "Additional items not allowed": "Additional items not allowed",
   "Additional Parameters": "Additional Parameters",
+  "Additional properties not allowed": "Additional properties not allowed",
   "Address": "Address",
   "Administration": "Administration",
   "Administrator": "Administrator",
@@ -69,6 +71,7 @@
   "Area of Interest": "Area of Interest",
   "Area of interest for notification": "Area of interest for notification",
   "Area of interest is required": "Area of interest is required",
+  "Array items are not unique": "Array items are not unique",
   "Attribute": "Attribute",
   "Attribute    ": "Attribute    ",
   "Attribute Identifier": "Attribute Identifier",
@@ -209,6 +212,7 @@
   "Default": "Default",
   "Default type": "Default type",
   "Delimiter character": "Delimiter character",
+  "Dependency failed - key must exist": "Dependency failed - key must exist",
   "Description": "Description",
   "Distance Units": "Distance Units",
   "Do not filter": "Do not filter",
@@ -260,6 +264,7 @@
   "Format (once selected, it can&#39;t be changed)": "Format (once selected, it can&#39;t be changed)",
   "Format (once selected, it can't be changed)": "Format (once selected, it can't be changed)",
   "Format is required": "Format is required",
+  "Format validation failed": "Format validation failed",
   "Frequency": "Frequency",
   "Frequency value is invalid": "Frequency value is invalid",
   "Frequency value is required": "Frequency value is required",
@@ -330,8 +335,10 @@
   "Interpolation method is required": "Interpolation method is required",
   "Intersection": "Intersection",
   "Invalid alias": "Invalid alias",
+  "Invalid folder": "Invalid folder",
   "Invalid format": "Invalid format",
   "Invalid intersection. Static data series must have at least a attribute.": "Invalid intersection. Static data series must have at least a attribute.",
+  "Invalid mask": "Invalid mask",
   "Invalid range of ports": {
     " A valid port is from 1 to 65535": "Invalid range of ports. A valid port is from 1 to 65535"
   },
@@ -674,6 +681,7 @@
   "TOA5 DCP format": "TOA5 DCP format",
   "Table Name": "Table Name",
   "Table_name": "Table name",
+  "table_name": "Table name",
   "Temporal": "Temporal",
   "Test connection": "Test connection",
   "Text": "Text",
@@ -714,6 +722,7 @@
   "Type to search": "Type to search",
   "Unconfigured GraDs Data Series storage": "Unconfigured GraDs Data Series storage",
   "Union": "Union",
+  "Unknown property (not in schema)": "Unknown property (not in schema)",
   "User": "User",
   "User Analisys Select": "User Analisys Select",
   "User Author": "User Author",
@@ -737,6 +746,7 @@
   "VALUE": "VALUE",
   "Validate": "Validate",
   "Value": "Value",
+  "Value is not a valid number": "Value is not a valid number",
   "Value is required": "Value is required",
   "Value must be a number": "Value must be a number",
   "Value must be unique": "Value must be unique",
