--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -24,7 +24,9 @@
   "Add store configuration": "Adicione configuração de armazenamento",
   "Add value": "Adicionar valor",
   "Additional Data": "Dado Adicional",
+  "Additional items not allowed": "Itens adicionais não são permitidos",
   "Additional Parameters": "Parâmetros Adicionais",
+  "Additional properties not allowed": "Propriedades adicionais não são permitidas",
   "Address": "Endereço",
   "Administration": "Administração",
   "Administrator": "Administrador",
@@ -60,6 +62,7 @@
   "Area of Interest": "Área de Interesse",
   "Area of interest for notification": "Área de interesse para notificação",
   "Area of interest is required": "Área de interesse é requerida",
+  "Array items are not unique": "Os itens do array não são únicos",
   "Attribute": "Atributo",
   "Attribute    ": "Atributo    ",
   "Attribute Identifier": "Atributo Identificador",
@@ -198,6 +201,7 @@
   "Default": "Padrão",
   "Default type": "Tipo padrão",
   "Delimiter character": "Caractere delimitador",
+  "Dependency failed - key must exist": "Falha na dependência - a chave deve existir",
   "Description": "Descrição",
   "Distance Units": "Unidade de Distância",
   "Do not filter": "Não filtrar",
@@ -249,6 +253,7 @@
   "Format (once selected, it can&#39;t be changed)": "Formato (uma vez selecionado, não pode ser alterado)",
   "Format (once selected, it can't be changed)": "Formato (uma vez selecionado, não pode ser alterado)",
   "Format is required": "Selecione um formato",
+  "Format validation failed": "A validação de formato falhou",
   "Frequency": "Frequência",
   "Frequency value is invalid": "Valor de frequência é inválido",
   "Frequency value is required": "Valor de frequência é requerido",
@@ -315,7 +320,11 @@
   "Interpolation dummy value": "Valor de interpolação nulo",
   "Interpolation method is required": "Método de interpolação é requerido",
   "Intersection": "Interseção",
+  "Invalid alias": "Pseudônimo inválido",
+  "Invalid folder": "Pasta inválida",
+  "Invalid format": "Formato inválido",
   "Invalid intersection. Static data series must have at least a attribute.": "Interseção inválida. Séries de dados estáticos devem possuir pelo menos um atributo.",
+  "Invalid mask": "Máscara inválida",
   "Invalid range of ports": {
     " A valid port is from 1 to 65535": "Intervalo inválido de portas. Uma porta válida é de 1 a 65535"
   },
@@ -628,6 +637,7 @@
   "TOA5 DCP format": "PCD - Formato TOA5",
   "Table Name": "Nome da tabela",
   "Table_name": "Nome da tabela",
+  "table_name": "Nome da tabela",
   "Temporal": "Temporal",
   "Test connection": "Testar Conecção",
   "Text": "Texto",
@@ -664,6 +674,7 @@
   "Type to search": "Digite para pesquisar",
   "Unconfigured GraDs Data Series storage": "Não configurado armazenamento de série de dados GraDs",
   "Union": "União",
+  "Unknown property (not in schema)": "Propriedade desconhecida (não está no esquema)",
   "User": "Usuário",
   "User Analisys Select": "Análise do Usuário Selecionada",
   "User Author": "Usuário autor",
@@ -687,6 +698,7 @@
   "VALUE": "VALOR",
   "Validate": "Validar",
   "Value": "Valor",
+  "Value is not a valid number": "O valor não é um número válido",
   "Value is required": "Valor é requerido",
   "Value must be a number": "Valor deve ser um número",
   "Value must be unique": "Valor deve ser único",
