--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -126,7 +126,7 @@
   "Confirm Password": "Confirm Password",
   "Confirm password": "Confirm password",
   "Confirm password is required": "Confirm password is required",
-  "Confirm password must be same password": "Confirm password must be same password",
+  "The password confirmation must be identical to the password": "The password confirmation must be identical to the password",
   "Connection": "Connection",
   "Connection Status": "Connection Status",
   "Connection Successful": "Connection Successful",
@@ -463,6 +463,7 @@
   "Number of Colors": "Number of Colors",
   "Number of Colors is required": "Number of Colors is required",
   "Number of Threads": "Number of Threads",
+  "Number of threads is invalid": "Number of threads is invalid",
   "Number of threads is required": "Number of threads is required",
   "OGR static data file": "OGR static data file",
   "OK": "OK",
