--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -116,8 +116,8 @@
   "Confirm": "Confirmar",
   "Confirm Password": "Confirmar Senha",
   "Confirm password": "Confirmar senha",
-  "Confirm password is required": "Confirmação de senha é requerida",
-  "Confirm password must be same password": "Confirmar senha deve ser a mesma senha",
+  "Confirm password is required": "O preenchimento da confirmação de senha é obrigatório",
+  "The password confirmation must be identical to the password": "A confirmação da senha deve ser igual à senha",
   "Connection": "Conecção",
   "Connection Status": "Status de conexão",
   "Connection Successful": "Conexão sucedida",
@@ -217,7 +217,7 @@
   "Email": "Email",
   "Email Host": "Endereço",
   "Email Host is required": "O preenchimento do endereço é obrigatório",
-  "Email is required": "Email é requerido",
+  "Email is required": "O preenchimento do email é obrigatório",
   "Email Parameters": "Dados de E-mail",
   "Emails": "Emails",
   "End": "Fim",
@@ -393,7 +393,7 @@
   "Multiplier": "Multiplicador",
   "Must have a valid store values to create an intersection": "Configuração de armazenamento deve ser válida para criar interseção",
   "Name": "Nome",
-  "Name is required": "Nome é requerido",
+  "Name is required": "O preenchimento do nome é obrigatório",
   "Nearest Neighbor": "Vizinho mais próximo",
   "New Level": "Novo Nível",
   "New Risk": "Novo Risco",
@@ -430,6 +430,7 @@
   "Number of Colors": "Número de cores",
   "Number of Colors is required": "O preenchimento do número de cores é obrigatório",
   "Number of Threads": "Número de Threads",
+  "Number of threads is invalid": "Número de threads inválido",
   "Number of threads is required": "O preenchimento do número de threads é obrigatório",
   "OGR static data file": "Árquivo estático OGR",
   "OK": "OK",
@@ -448,8 +449,8 @@
   "PCD Data Registration": "Registro de dados de PCD",
   "Parameters": "Parâmetros",
   "Password": "Senha",
-  "Password did not match for the confirmation password": "Senha não coincide para a senha de confirmação",
-  "Password is required": "Senha é requerida",
+  "Password did not match for the confirmation password": "A senha e a confirmação não coincidem",
+  "Password is required": "O preenchimento da senha é obrigatório",
   "Path": "Caminho",
   "Path is required": "Caminho é requerido",
   "Path to script": "Caminho para o script",
@@ -685,14 +686,14 @@
   "User Password credential": "Senha do Usuário",
   "User Registration": "Registro de Usuário",
   "User Update": "Atualização de Usuário",
-  "User cell phone number": "Múmero de celular do usuário",
+  "User cell phone number": "Número de celular do usuário",
   "User e-mail": "E-mail do Usuário",
   "User is required": "O preenchimento do usuário é obrigatório",
   "User name credential": "Nome do Usuário",
   "User password": "Senha do Usuário",
   "User to connect": "Usuário para conectar",
-  "Username": "Nome do Usuário",
-  "Username is required": "Nome do Usuário é requerido",
+  "Username": "Usuário",
+  "Username is required": "O preenchimento do usuário é obrigatório",
   "Users": "Usuários",
   "Users Handling": "Manipulação de Usuários",
   "VALUE": "VALOR",
