--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -239,6 +239,7 @@
   "Expert mode": "Expert mode",
   "Export": "Export",
   "Fields": "Fields",
+  "FILE": "FILE",
   "File": "File",
   "File static data": "File static data",
   "Files can be overwritten": "Files can be overwritten",
@@ -269,6 +270,7 @@
   "Frequency value is invalid": "Frequency value is invalid",
   "Frequency value is required": "Frequency value is required",
   "Friday": "Friday",
+  "FTP": "FTP",
   "Functions": "Functions",
   "GDAL raster": "GDAL raster",
   "GRID": "GRID",
@@ -290,6 +292,7 @@
   "Host": "Host",
   "Host connection": "Host connection",
   "Hours": "Hours",
+  "HTTP": "HTTP",
   "I forgot my password": "I forgot my password",
   "ID": "ID",
   "INPE's DCP data format": "INPE's DCP data format",
@@ -312,6 +315,8 @@
   "Inactive": "Inactive",
   "Include Report": "Include Report",
   "Include report": "Include report",
+  "Incorrect password.": "Incorrect password.",
+  "Incorrect user.": "Incorrect user.",
   "Influence": "Influence",
   "Influence ": "Influence ",
   "Influence Area": "Influence Area",
@@ -417,6 +422,7 @@
   "MinY is required": "MinY is required",
   "Minimum 2": "Minimum 2",
   "Minutes": "Minutes",
+  "Missing credentials": "Missing credentials.",
   "Monday": "Monday",
   "Monitored Object": "Monitored Object",
   "Monitored object": "Monitored object",
@@ -503,6 +509,7 @@
   "Port is required for": "Port is required for",
   "Port must be a number": "Port must be a number",
   "Port number": "Port number",
+  "POSTGIS": "POSTGIS",
   "PostGIS occurrence": "PostGIS occurrence",
   "PostGIS static data": "PostGIS static data",
   "PostGis occurrence": "PostGIS occurrence",
