--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -45,6 +45,7 @@
   "Analysis": "Análises",
   "Analysis Author": "Autor da Análise",
   "Analysis Description": "Descrição da Análise",
+  "Analysis Grid": "Análise do Tipo Grade",
   "Analysis Institute": "Instituto da Análise",
   "Analysis Model": "Modelo de Análises",
   "Analysis Name": "Nome da Análise",
@@ -228,6 +229,7 @@
   "Expert mode": "Modo especialista",
   "Export": "Exportar",
   "Fields": "Campos",
+  "FILE": "ARQUIVO",
   "File": "Arquivo",
   "File static data": "Arquivo de Dado Estático",
   "Files can be overwritten": "Arquivos podem ser sobrescritos",
@@ -258,6 +260,7 @@
   "Frequency value is invalid": "Valor de frequência é inválido",
   "Frequency value is required": "Valor de frequência é requerido",
   "Friday": "Sexta-feira",
+  "FTP": "FTP",
   "Functions": "Funções",
   "GDAL raster": "Matriz GDAL",
   "GRID": "GRADE",
@@ -267,6 +270,7 @@
   "Generate Image": "Generação de Imagem",
   "Generate an image": "Gerar uma imagem",
   "GeoTIFF grid": "Grade GeoTIFF",
+  "Geometric Object": "Objeto Geométrico",
   "GrADS": "Formato GrADS",
   "Grid": "Grade",
   "Grid Data Series": "Série de Dados Matricial",
@@ -277,6 +281,7 @@
   "Host": "Máquina",
   "Host connection": "Conexão do host",
   "Hours": "Horas",
+  "HTTP": "HTTP",
   "I forgot my password": "Eu esqueci minha senha",
   "ID": "ID",
   "INPE's DCP data format": "PCD - formato INPE",
@@ -298,6 +303,9 @@
   "Import process executed with success, but there were duplicated Alias, check the values": "Processo de importação executado com sucesso, mas existem Pseudônimos duplicados, verifique os valores",
   "Inactive": "Inativo",
   "Include Report": "Incluir Relatório",
+  "Include report": "Incluir relatório",
+  "Incorrect password.": "Senha incorreta.",
+  "Incorrect user.": "Usuário incorreto.",
   "Influence": "Influência",
   "Influence ": "Influência ",
   "Influence Area": "Área de Influência",
@@ -386,6 +394,7 @@
   "MinY is required": "Ymin é requerido",
   "Minimum 2": "Mínimo 2",
   "Minutes": "Minutos",
+  "Missing credentials": "Usuário e/ou senha não inseridos.",
   "Monday": "Segunda-feira",
   "Monitored Object": "Objeto Monitorado",
   "Monitored object": "Objeto monitorado",
@@ -432,7 +441,7 @@
   "Number of Threads": "Número de Threads",
   "Number of threads is invalid": "Número de threads inválido",
   "Number of threads is required": "O preenchimento do número de threads é obrigatório",
-  "OGR static data file": "Árquivo estático OGR",
+  "OGR static data file": "Arquivo estático OGR",
   "OK": "OK",
   "Object Monitored": "Objeto Monitorado",
   "Obs: enter the addresses separated by semicolons": "Obs: insira os endereços separados por ponto e vírgula",
@@ -468,6 +477,7 @@
   "Port is required for": "Porta é requerida para",
   "Port must be a number": "Porta deve ser um número",
   "Port number": "Número da porta",
+  "POSTGIS": "POSTGIS",
   "PostGIS occurrence": "Ocorrência PostGIS",
   "PostGIS static data": "Dado Estático PostGIS",
   "PostGis occurrence": "Ocorrência PostGIS",
