--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -1,4 +1,30 @@
 {
+  "-12": "-12",
+  "-11": "-11",
+  "-10": "-10",
+  "-9": "-9",
+  "-8": "-8",
+  "-7": "-7",
+  "-6": "-6",
+  "-5": "-5",
+  "-4": "-4",
+  "-3": "-3",
+  "-2": "-2",
+  "-1": "-1",
+  "0": "0",
+  "1": "1",
+  "2": "2",
+  "3": "3",
+  "4": "4",
+  "5": "5",
+  "6": "6",
+  "7": "7",
+  "8": "8",
+  "9": "9",
+  "10": "10",
+  "11": "11",
+  "12": "12",
+  " deleted": " deleted",
   " projects has been imported": {
     " ": " projects has been imported. "
   },
@@ -80,6 +106,7 @@
   "Attribute name cannot be same": "Attribute name cannot be same",
   "Attribute name is required": "Attribute name is required",
   "Attributes": "Attributes",
+  "Attributes to be Converted": "Attributes to be Converted",
   "Author": "Author",
   "Average": "Average",
   "Band": "Band",
@@ -132,7 +159,9 @@
   "Connection Successful": "Connection Successful",
   "Connection with service refused, check if the service is running!": "Connection with service refused, check if the service is running!",
   "Convert all": "Convert all",
+  "Could not save data provider due: name must be unique;  name: name must be unique": "Could not save data provider due: name must be unique;  name: name must be unique",
   "Could not save data series due:  name: name must be unique": "Could not save data series due: name must be unique",
+  "Could not save project: name must be unique": "Could not save project: name must be unique",
   "Count": "Count",
   "Crop raster": "Crop raster",
   "Custom": "Custom",
@@ -141,6 +170,7 @@
   "DCP CSV": "DCP CSV",
   "DCP Import Error": "DCP Import Error",
   "DCP Import Process": "DCP Import Process",
+  "DCP Name": "DCP Name",
   "DCP PostGIS": "DCP PostGIS",
   "DCP data series is not supported yet": "DCP data series is not supported yet",
   "DCP error": "DCP error",
@@ -207,8 +237,10 @@
   "Database username": "Database username",
   "Databases": "Databases",
   "Databases Handling": "Databases Handling",
+  "DataProviderError: Could not save data provider due: name must be unique;  name: name must be unique": "DataProviderError: Could not save data provider due: name must be unique;  name: name must be unique",
   "Date": "Date",
   "Date Time": "Date Time",
+  "Days": "Days",
   "Default": "Default",
   "Default type": "Default type",
   "Delimiter character": "Delimiter character",
@@ -229,7 +261,7 @@
   "Email Host": "Email Host",
   "Email Host is required": "Email Host is required",
   "Email is required": "Email is required",
-  "Email Parameters": "Email Parameters",
+  "Email Server": "Email Server",
   "Emails": "Emails",
   "End": "End",
   "End Date": "End Date",
@@ -260,6 +292,7 @@
   },
   "First": "First",
   "Float": "Float",
+  "Float (FLOAT32)": "Float (FLOAT32)",
   "Folder": "Folder",
   "Format": "Format",
   "Format (once selected, it can&#39;t be changed)": "Format (once selected, it can&#39;t be changed)",
@@ -290,7 +323,10 @@
   "Header size": "Header size",
   "Helpers": "Helpers",
   "Host": "Host",
+  "Host Address (URI)": "Host Address (URI)",
+  "Host Address is required": "Host Address is required",
   "Host connection": "Host connection",
+  "Host not found": "Host not found",
   "Hours": "Hours",
   "HTTP": "HTTP",
   "I forgot my password": "I forgot my password",
@@ -332,6 +368,7 @@
   "Instance": "Instance",
   "Institute": "Institute",
   "Integer": "Integer",
+  "Integer (INT16)": "Integer (INT16)",
   "Interpolation Method": "Interpolation Method",
   "Interpolation dummy": "Interpolation dummy",
   "Interpolation dummy is invalid number": "Interpolation dummy is invalid number",
@@ -344,6 +381,7 @@
   "Invalid format": "Invalid format",
   "Invalid intersection. Static data series must have at least a attribute.": "Invalid intersection. Static data series must have at least a attribute.",
   "Invalid mask": "Invalid mask",
+  "Invalid path": "Invalid path",
   "Invalid range of ports": {
     " A valid port is from 1 to 65535": "Invalid range of ports. A valid port is from 1 to 65535"
   },
@@ -378,6 +416,7 @@
   "Lightning occurrence": "Lightning occurrence",
   "Line Stroke Width": "Line Stroke Width",
   "Line Stroke Width is required for View data series": "Line Stroke Width is required for View data series",
+  "Line with the Attributes Names": "Line with the Attributes Names",
   "Load Project": "Load Project",
   "Load configuration": "Load configuration",
   "Loading": "Loading",
@@ -468,6 +507,7 @@
   "Number of Bands": "Number of Bands",
   "Number of Colors": "Number of Colors",
   "Number of Colors is required": "Number of Colors is required",
+  "Number of Lines of the Header": "Number of Lines of the Header",
   "Number of Threads": "Number of Threads",
   "Number of threads is invalid": "Number of threads is invalid",
   "Number of threads is required": "Number of threads is required",
@@ -708,6 +748,7 @@
   "Time Units": "Time Units",
   "Time unit is required": "Time unit is required",
   "Timeout": " Request took longer than ",
+  "Timeout: Request took longer than ": "Timeout: Request took longer than ",
   "Timezone": "Timezone",
   "Timezone is required": "Timezone is required",
   "Tipo": "Tipo",
@@ -749,6 +790,7 @@
   "User to connect": "User to connect",
   "Username": "Username",
   "Username is required": "Username is required",
+  "Username or password does not match": "Username or password does not match",
   "Users": "Users",
   "Users Handling": "Users Handling",
   "VALUE": "VALUE",
