--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -1,4 +1,30 @@
 {
+  "-12": "-12",
+  "-11": "-11",
+  "-10": "-10",
+  "-9": "-9",
+  "-8": "-8",
+  "-7": "-7",
+  "-6": "-6",
+  "-5": "-5",
+  "-4": "-4",
+  "-3": "-3",
+  "-2": "-2",
+  "-1": "-1",
+  "0": "0",
+  "1": "1",
+  "2": "2",
+  "3": "3",
+  "4": "4",
+  "5": "5",
+  "6": "6",
+  "7": "7",
+  "8": "8",
+  "9": "9",
+  "10": "10",
+  "11": "11",
+  "12": "12",
+  " deleted": " removido",
   " projects has been imported": {
     " ": " projetos foram importados. "
   },
@@ -6,6 +32,10 @@
     " ": " projeto foi importado. "
   },
   " removed": " removido",
+  " seconds": {
+    "": " segundos."
+  },
+  
   "%Y - Four digits year": "%Y - Ano com quatro digitos",
   "%d - Day": "%d - Dia",
   "%d Day": "%d Dia",
@@ -72,6 +102,7 @@
   "Attribute name cannot be same": "Nome do atributo não pode ser igual",
   "Attribute name is required": "Nome do atributo é requerido",
   "Attributes": "Atributos",
+  "Attributes to be Converted": "Atributos a Serem Convertidos",
   "Author": "Autor",
   "Average": "Média",
   "Band": "Banda",
@@ -119,19 +150,22 @@
   "Confirm password": "Confirmar senha",
   "Confirm password is required": "O preenchimento da confirmação de senha é obrigatório",
   "The password confirmation must be identical to the password": "A confirmação da senha deve ser igual à senha",
-  "Connection": "Conecção",
-  "Connection Status": "Status de conexão",
-  "Connection Successful": "Conexão sucedida",
+  "Connection": "Conexão",
+  "Connection Status": "Status da Conexão",
+  "Connection Successful": "Conexão bem sucedida",
   "Connection with service refused, check if the service is running!": "Conexão com o serviço recusada, verifique se o mesmo está em execução!",
   "Convert all": "Converter todos",
+  "Could not save data provider due: name must be unique;  name: name must be unique": "Não foi possível salvar o servidor de dados, já existe um registro com o nome inserido, e o nome deve ser único.",
   "Could not save data series due:  name: name must be unique": "Não foi possível salvar a série de dados, já existe um registro com o nome inserido, e o nome deve ser único.",
+  "Could not save project: name must be unique": "Não foi possível salvar o projeto, já existe um registro com o nome inserido, e o nome deve ser único.",
   "Count": "Contagem",
   "Custom": "Personalizada",
-  "DB connection": "Conecção da Base de Dados",
+  "DB connection": "Conexão da Base de Dados",
   "DCP": "PCD",
   "DCP CSV": "PCD CSV",
   "DCP Import Error": "Erro de Importação de PCD",
   "DCP Import Process": "Processo de Importação de PCDs",
+  "DCP Name": "Nome da PCD",
   "DCP PostGIS": "PCD - PostGIS",
   "DCP data series is not supported yet": "Séries de dados do tipo PCD ainda não são suportadas",
   "DCP error": "Erro PCD",
@@ -189,7 +223,7 @@
   "Database": "Base de dados",
   "Database Name": "Nome da Base de Dados",
   "Database Registration": "Registro de Base de Dados",
-  "Database connection": "Conecção da Base de Dados",
+  "Database connection": "Conexão da Base de Dados",
   "Database hostname": "Nome da Máquina com Base de Dados",
   "Database name is required": "O preenchimento do nome da base de dados é obrigatório",
   "Database password": "Senha da Base de Dados",
@@ -197,8 +231,10 @@
   "Database username": "Nome do Usuário da Base de Dados",
   "Databases": "Base de Dados",
   "Databases Handling": "Manipulação de Base de Dados",
+  "DataProviderError: Could not save data provider due: name must be unique;  name: name must be unique": "Não foi possível salvar o servidor de dados, já existe um registro com o nome inserido, e o nome deve ser único.",
   "Date": "Data",
   "Date Time": "Data Hora",
+  "Days": "Dias",
   "Default": "Padrão",
   "Default type": "Tipo padrão",
   "Delimiter character": "Caractere delimitador",
@@ -219,7 +255,7 @@
   "Email Host": "Endereço",
   "Email Host is required": "O preenchimento do endereço é obrigatório",
   "Email is required": "O preenchimento do email é obrigatório",
-  "Email Parameters": "Dados de E-mail",
+  "Email Server": "Servidor de Email",
   "Emails": "Emails",
   "End": "Fim",
   "End Date": "Data Final",
@@ -250,6 +286,7 @@
   },
   "First": "Primeiro",
   "Float": "Ponto flutuante",
+  "Float (FLOAT32)": "Ponto flutuante (FLOAT32)",
   "Folder": "Pasta",
   "Format": "Formato",
   "Format (once selected, it can&#39;t be changed)": "Formato (uma vez selecionado, não pode ser alterado)",
@@ -279,7 +316,10 @@
   "Header size": "Tamanho do cabeçalho",
   "Helpers": "Auxiliares",
   "Host": "Máquina",
+  "Host Address (URI)": "Endereço do Servidor (URI)",
+  "Host Address is required": "O preenchimento do endereço do servidor é obrigatório",
   "Host connection": "Conexão do host",
+  "Host not found": "Endereço não encontrado",
   "Hours": "Horas",
   "HTTP": "HTTP",
   "I forgot my password": "Eu esqueci minha senha",
@@ -321,6 +361,7 @@
   "Instance": "Instância",
   "Institute": "Instituto",
   "Integer": "Inteiro",
+  "Integer (INT16)": "Inteiro (INT16)",
   "Interpolation Method": "Método de Interpolação",
   "Interpolation dummy": "Interpolação nula",
   "Interpolation dummy is invalid number": "Interpolação nula é um número inválido",
@@ -333,6 +374,7 @@
   "Invalid format": "Formato inválido",
   "Invalid intersection. Static data series must have at least a attribute.": "Interseção inválida. Séries de dados estáticos devem possuir pelo menos um atributo.",
   "Invalid mask": "Máscara inválida",
+  "Invalid path": "Caminho inválido",
   "Invalid range of ports": {
     " A valid port is from 1 to 65535": "Intervalo inválido de portas. Uma porta válida é de 1 a 65535"
   },
@@ -351,6 +393,7 @@
   "Lightning occurrence": "Ocorrência de raios",
   "Line Stroke Width": "Largura da linha",
   "Line Stroke Width is required for View data series": "Largura da linha é obrigatório para visualição da série de dados",
+  "Line with the Attributes Names": "Linha com os Nomes dos Atributos",
   "Load Project": "Carregar Projeto",
   "Load configuration": "Carregar Configuração",
   "Loading": "Carregando",
@@ -438,6 +481,7 @@
   "Number of Bands": "Número de bandas",
   "Number of Colors": "Número de cores",
   "Number of Colors is required": "O preenchimento do número de cores é obrigatório",
+  "Number of Lines of the Header": "Número de Linhas do Cabeçalho",
   "Number of Threads": "Número de Threads",
   "Number of threads is invalid": "Número de threads inválido",
   "Number of threads is required": "O preenchimento do número de threads é obrigatório",
@@ -537,14 +581,14 @@
   "SRID": "SRID",
   "SRID is invalid": "SRID é inválido",
   "SRID is required": "SRID é requerido",
-  "SSH connection": "Conecção SSH",
+  "SSH connection": "Conexão SSH",
   "Same from data series": "Mesmo da série de dados",
   "Saturday": "Sábado",
   "Save": "Salvar",
   "Save and Run": "Salvar e executar",
-  "Schedule": "Programação",
+  "Schedule": "Agendamento",
   "Schedule Retry": "Programar Repetição",
-  "Schedule Timeout": "Programação de Tempo Limite",
+  "Schedule Timeout": "Agendamento de Tempo Limite",
   "Schedule Type is required": "Tipo de agendamento é obrigatório",
   "Schedule value is not a valid integer": "Valor do agendamento não é válido",
   "Schedule value is not in range": "Valor do agendamento não está no intervalo",
@@ -650,7 +694,7 @@
   "Table_name": "Nome da tabela",
   "table_name": "Nome da tabela",
   "Temporal": "Temporal",
-  "Test connection": "Testar Conecção",
+  "Test connection": "Testar Conexão",
   "Text": "Texto",
   "The first line is a header?": "A primeira linha é um cabeçalho?",
   "The values of the levels must be numeric and be in a growing order, and the names of the levels must be filled": "Os valores dos níveis devem ser numéricos e estar em uma ordem crescente, e os nomes dos níveis devem ser preenchidos",
@@ -663,6 +707,8 @@
   "Time Unit": "Unidade de tempo",
   "Time Units": "Unidade de Tempo",
   "Time unit is required": "Unidade de tempo é requerido",
+  "Timeout": " A requisição demorou mais que ",
+  "Timeout: Request took longer than ": "Tempo Limite do Servidor de Dados: A requisição demorou mais que ",
   "Timezone": "Fuso horário",
   "Timezone is required": "Fuso horário é requerido",
   "Tipo": "Tipo",
@@ -704,6 +750,7 @@
   "User to connect": "Usuário para conectar",
   "Username": "Usuário",
   "Username is required": "O preenchimento do usuário é obrigatório",
+  "Username or password does not match": "O usuário ou a senha não correspondem",
   "Users": "Usuários",
   "Users Handling": "Manipulação de Usuários",
   "VALUE": "VALOR",
