improvements and bug fixes

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -507,6 +507,7 @@
   "Number of Bands": "Number of Bands",
   "Number of Colors": "Number of Colors",
   "Number of Colors is required": "Number of Colors is required",
+  "Number of Layers": "Number of Layers",
   "Number of Lines of the Header": "Number of Lines of the Header",
   "Number of Threads": "Number of Threads",
   "Number of threads is invalid": "Number of threads is invalid",
