--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -481,6 +481,7 @@
   "Number of Bands": "Número de bandas",
   "Number of Colors": "Número de cores",
   "Number of Colors is required": "O preenchimento do número de cores é obrigatório",
+  "Number of Layers": "Número de Camadas",
   "Number of Lines of the Header": "Número de Linhas do Cabeçalho",
   "Number of Threads": "Número de Threads",
   "Number of threads is invalid": "Número de threads inválido",
