creating semantics translations

--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -169,6 +169,10 @@
   "DCP PostGIS": "PCD - PostGIS",
   "DCP data series is not supported yet": "Séries de dados do tipo PCD ainda não são suportadas",
   "DCP error": "Erro PCD",
+  "DCP - CSV custom": "PCD – CSV customizável",
+  "DCP - INPE": "PCD – INPE",
+  "DCP - PostGIS": "PCD – PostGIS",
+  "DCP - TOA5": "PCD – TOA5",
   "Data Export": "Exportação de Dados",
   "Data Frequency": "Frequência de Dados",
   "Data Grid Registration": "Registro de Dados Matricial (Grid)",
@@ -313,6 +317,12 @@
   "Grid Data Series": "Série de Dados Matricial",
   "Grid analysis script must end with 'return' statement": "Os modelos de análises do tipo Grade devem terminar com um 'return'",
   "Grid configuration": "Configuração da Grade",
+  "Grid - ASC-Grid": "Matriz - ASC-Grid",
+  "Grid - GDAL (other formats)": "Matriz - GDAL (demais formatos)",
+  "Grid - GeoTiff": "Matriz - GeoTiff",
+  "Grid - GrADS": "Matriz - GrADS",
+  "Grid - Grib2": "Matriz - Grib2",
+  "Grid - HDF5": "Matriz - HDF5",
   "Header size": "Tamanho do cabeçalho",
   "Helpers": "Auxiliares",
   "Host": "Máquina",
@@ -441,6 +451,7 @@
   "Monday": "Segunda-feira",
   "Monitored Object": "Objeto Monitorado",
   "Monitored object": "Objeto monitorado",
+  "Monitored object analysis": "Análise de objeto monitorado",
   "Monitored object analysis result": "Resultado de análise com Objeto Monitorado",
   "Multiplier": "Multiplicador",
   "Must have a valid store values to create an intersection": "Configuração de armazenamento deve ser válida para criar interseção",
@@ -492,6 +503,10 @@
   "Obs: enter the addresses separated by semicolons": "Obs: insira os endereços separados por ponto e vírgula",
   "Occurrence": "Ocorrência",
   "Occurrence CSV": "Ocorrência CSV",
+  "Occurrence – CSV custom": "Ocorrência – CSV customizável",
+  "Occurrence – INPE fire program": "Ocorrência - Prog. de Queimadas / INPE",
+  "Occurrence – INPE lightning program": "Ocorrência - Prog. de Raios / INPE",
+  "Occurrence – PostGIS": "Ocorrência - PostGIS",
   "Online": "Online",
   "Operation": "Operação",
   "Operation is required": "Operação é requerida",
@@ -677,6 +692,9 @@
   "Static Data Registration": "Registro de Dado Estático",
   "Static GDAL grid": "Grade estática GDAL",
   "Static GeoTIFF grid": "Grade estático GeoTIFF",
+  "Static geometric object - OGR (data file)": "Objeto geométrico estático - OGR (arquivo)",
+  "Static geometric object - PostGIS": "Objeto geométrico estático - PostGIS",
+  "Static grid - GDAL": "Matriz estática - GDAL",
   "Static Themes": "Temas Estáticos",
   "Statistics": "Estatísticas",
   "Status": "Situação Atual",
