checking connection with the smtp server

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -59,6 +59,7 @@
   "Additional Parameters": "Additional Parameters",
   "Additional properties not allowed": "Additional properties not allowed",
   "Address": "Address",
+  "Address not found": "Address not found",
   "Administration": "Administration",
   "Administrator": "Administrator",
   "Advanced": "Advanced",
@@ -158,6 +159,7 @@
   "Connection": "Connection",
   "Connection Status": "Connection Status",
   "Connection Successful": "Connection Successful",
+  "Connection timeout, verify the port": "Connection timeout, verify the port",
   "Connection with service refused, check if the service is running!": "Connection with service refused, check if the service is running!",
   "Convert all": "Convert all",
   "Could not save data provider due: name must be unique;  name: name must be unique": "Could not save data provider due: name must be unique;  name: name must be unique",
@@ -268,6 +270,7 @@
   "Email Host is required": "Email Host is required",
   "Email is required": "Email is required",
   "Email Server": "Email Server",
+  "Email Server Connection": "Email Server Connection",
   "Emails": "Emails",
   "End": "End",
   "End Date": "End Date",
@@ -276,6 +279,7 @@
   "Enviroment Variables": "Enviroment Variables",
   "Expert mode": "Expert mode",
   "Export": "Export",
+  "Failed to connect, verify the connection parameters": "Failed to connect, verify the connection parameters",
   "Fields": "Fields",
   "FILE": "FILE",
   "File": "File",
