--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -58,6 +58,7 @@
   "Additional Parameters": "Parâmetros Adicionais",
   "Additional properties not allowed": "Propriedades adicionais não são permitidas",
   "Address": "Endereço",
+  "Address not found": "Endereço não encontrado",
   "Administration": "Administração",
   "Administrator": "Administrador",
   "Advanced": "Avançado",
@@ -154,6 +155,7 @@
   "Connection": "Conexão",
   "Connection Status": "Status da Conexão",
   "Connection Successful": "Conexão bem sucedida",
+  "Connection timeout, verify the port": "Tempo limite de conexão excedido, verifique a porta",
   "Connection with service refused, check if the service is running!": "Conexão com o serviço recusada, verifique se o mesmo está em execução!",
   "Convert all": "Converter todos",
   "Could not save data provider due: name must be unique;  name: name must be unique": "Não foi possível salvar o servidor de dados, já existe um registro com o nome inserido, e o nome deve ser único.",
@@ -262,6 +264,7 @@
   "Email Host is required": "O preenchimento do endereço é obrigatório",
   "Email is required": "O preenchimento do email é obrigatório",
   "Email Server": "Servidor de Email",
+  "Email Server Connection": "Conexão com o Servidor de Email",
   "Emails": "Emails",
   "End": "Fim",
   "End Date": "Data Final",
@@ -270,6 +273,7 @@
   "Enviroment Variables": "Variáveis de Ambiente",
   "Expert mode": "Modo especialista",
   "Export": "Exportar",
+  "Failed to connect, verify the connection parameters": "Falha ao conectar, verifique os parâmetros de conexão",
   "Fields": "Campos",
   "FILE": "ARQUIVO",
   "File": "Arquivo",
